--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!--	                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">-->
 <!--	                            </div>-->
 	                            <div class="control">
-	                                <a class="button button-primary button-block" href="mailto:hi@shopter.tech">Get in touch</a>
+	                                <a class="button button-primary button-block" href="mailto:support@shopter.online">Get in touch</a>
 	                            </div>
 	                        </div>
 						</div>
